<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>shogun</groupId>
    <artifactId>shogun</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>create-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/jdk.packager-osx/jpackager</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <longModulepath>false</longModulepath>
                            <environmentVariables>
                                <JAVA_HOME>${java.home}</JAVA_HOME>
                            </environmentVariables>
                            <arguments>
                                <argument>create-image</argument>
                                <argument>--verbose</argument>
                                <argument>--echo-mode</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}/</argument>
                                <argument>--class</argument>
                                <argument>Shogun</argument>
                                <argument>--main-jar</argument>
                                <argument>./${project.artifactId}-${project.version}.jar</argument>
                                <argument>--output</argument>
                                <argument>./</argument>
                                <argument>--singleton</argument>
                                <argument>--identifier</argument>
                                <argument>com.samuraism.Shogun</argument>
                                <argument>--name</argument>
                                <argument>Shogun</argument>
                                <argument>--add-modules</argument>
                                <argument>java.base,java.desktop</argument>
                                <argument>--strip-native-commands</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
        </plugins>
    </build>


</project>